<?xml version="1.0" encoding="utf-8"?>
<!-- file: activity_edit_profile.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".activities.profile.EditProfileActivity">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back_edit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_back_arrow"
            app:tint="?attr/colorOnPrimary" />

        <TextView
            style="?android:attr/textViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_profile_title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_username"
                android:textColor="?android:attr/textColorSecondary" />
            <EditText
                android:id="@+id/et_edit_username"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_profile_username_hint"
                android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColorHint"/>

            <TextView
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_full_name"
                android:textColor="?android:attr/textColorSecondary" />
            <EditText
                android:id="@+id/et_edit_fullname"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_profile_full_name_hint"
                android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColorHint"/>

            <TextView
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_email"
                android:textColor="?android:attr/textColorSecondary" />
            <EditText
                android:id="@+id/et_edit_email"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_profile_email_hint"
                android:inputType="textEmailAddress"
                android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColorHint"/>

            <TextView
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_address"
                android:textColor="?android:attr/textColorSecondary" />
            <EditText
                android:id="@+id/et_edit_address"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:hint="@string/edit_profile_address_hint"
                android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColorHint"
                android:inputType="textMultiLine"
                android:minLines="3" />

            <TextView
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_old_password"
                android:textColor="?android:attr/textColorSecondary" />
            <EditText
                android:id="@+id/et_old_password"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_profile_old_password_hint"
                android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColorHint"
                android:inputType="textPassword" />

            <TextView
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_new_password"
                android:textColor="?android:attr/textColorSecondary" />
            <EditText
                android:id="@+id/et_new_password"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_profile_new_password_hint"
                android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColorHint"
                android:inputType="textPassword" />

            <TextView
                style="?android:attr/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_confirm_password"
                android:textColor="?android:attr/textColorSecondary" />
            <EditText
                android:id="@+id/et_confirm_password"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_profile_confirm_password_hint"
                android:textColor="?android:attr/textColor"
                android:textColorHint="?android:attr/textColorHint"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/btn_save_profile"
                style="?android:attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/edit_profile_save_button" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>